--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: crazygizmowh@nate.com
 description: >- # this means to ignore newlines until "baseurl:"
   자기소개와 비트캠프 실습 내용
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://github.com/melon-jy"
 twitter_username: melon_vlrt  
 github_username:  Melon-jy
 
