초기 소개 사이트

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   비트캠프 Naver Cloud Platporm AiaaS 1기 실습 내용
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://github.com/melon-jy"
-twitter_username: melon_vlrt  
+twitter_username: melon_Meltube  
 github_username:  Melon-jy
 
 # Build settings
