--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://github.com/melon-jy"
 twitter_username: melon_Meltube  
 github_username:  Melon-jy
+instagram_username: meltube2020 
 # Build settings
 theme: minima
 plugins:
