--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,9 @@ title: 이준영의 개인 블로그
 email: crazygizmowh@nate.com
 description: >- # this means to ignore newlines until "baseurl:"
   비트캠프 Naver Cloud Platporm AiaaS 1기 실습 내용
+twitter_username: melon_Meltube  
+github_username:  Melon-jy
+instagram_username: meltube2020 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://github.com/melon-jy"
 twitter_username: melon_Meltube  
