파일 복구하기3

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Melon's bitcamp life
 author:
-  name: Melon-jy
+  name: Melon-jy-Yi
   email: crazygizmowh@nate.com
 description: > # this means to ignore newlines until "show_excerpts:"
   Again my site
