--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author:
   name: Melon-jy-Yi
   email: crazygizmowh@nate.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  Again my site
+  If You Would Like To Request Me Please Send Me A Mail
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
